--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 </li>
             </ul>
       </div>
+    <footer style="color:'#ffff'; display:'flex'; align-items:'center'; justify-content:'center'">Created with love by @GodswillYhurHIghnezz</footer>
       
     
   </body>
